--- a/frontend/src/pages/Posts/styles.css
+++ b/frontend/src/pages/Posts/styles.css
@@ -24,9 +24,11 @@
 }
 .Article_Content {
     min-height: 100vh;
-    max-width: 100%;    
+    max-width: 100%;
+    width: 100%;
     height: 100%;
 }
-.Article_Content div {
-    max-width: 760px;
+.Article_ContentArticle {
+    margin-top: 100px;
+    width: 760px;
 }
